[package]
name = "cloud-component-service"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cloud-component-service"
path = "src/server.rs"

[lib]

[dependencies]

golem-common = { workspace = true }
golem-api-grpc = { workspace = true }
golem-wasm-rpc = { workspace = true }
golem-component-service-base = {workspace = true}
golem-service-base = {workspace = true}
golem-wasm-ast = { workspace = true }
cloud-api-grpc = { path = "../cloud-api-grpc" }
cloud-common = { path = "../cloud-common" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
console-subscriber = { workspace = true }
figment = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http_02 = { workspace = true }
humantime-serde = { workspace = true }
lazy_static = { workspace = true }
mappable-rc = "0.1.1"
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true, features = ["prometheus", "opentelemetry"] }
poem-openapi = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "migrate",
    "chrono",
] }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
