[package]
name = "cloud-component-service"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cloud-component-service"
path = "src/server.rs"
test = false

[lib]
harness = false

[dependencies]

cloud-api-grpc = { path = "../cloud-api-grpc", version = "=0.0.0" }
cloud-common = { path = "../cloud-common", version = "=0.0.0" }
golem-common = { path = "../golem-common", version = "=0.0.0" }
golem-api-grpc = { path = "../golem-api-grpc", version = "=0.0.0" }
golem-wasm-rpc = { path = "../wasm-rpc", version = "=0.0.0" }
golem-component-service-base = { path = "../golem-component-service-base", version = "=0.0.0" }
golem-service-base = { path = "../golem-service-base", version = "=0.0.0" }
golem-wasm-ast = { path = "../wasm-ast", version = "=0.0.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true }
darling = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
lazy_static = { workspace = true }
mappable-rc = "0.1.1"
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true, features = ["prometheus", "opentelemetry"] }
poem-derive = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
prometheus = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "migrate",
    "chrono",
] }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
