[package]
name = "cloud-debugging-service"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[[bin]]
name = "cloud-debugging-service"
path = "src/server.rs"
test = false

[dependencies]
golem-common = { workspace = true }
golem-api-grpc = { workspace = true }
golem-wasm-rpc = { workspace = true }
golem-worker-executor-base = { workspace = true }
cloud-api-grpc = { path = "../cloud-api-grpc" }
cloud-common = { path = "../cloud-common" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-jrpc = {workspace = true}
log = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror ={ workspace = true }
uuid = { workspace = true }
tonic = {workspace = true}

wasmtime = { version = "=27.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "=27.0.0" }
wasmtime-wasi-http = { version = "=27.0.0" }

[dev-dependencies]
test-r = { workspace = true }
