[package]
name = "cloud-debugging-service"
version = "0.0.0"
edition = "2021"

autotests = false

[lib]
harness = false

[[bin]]
name = "cloud-debugging-service"
path = "src/server.rs"

[dependencies]
cloud-api-grpc = { path = "../cloud-api-grpc", version = "=0.0.0" }
cloud-common = { path = "../cloud-common", version = "=0.0.0" }
golem-worker-executor = { path = "../golem-worker-executor", version = "=0.0.0" }
golem-common = { path = "../golem-common", version = "=0.0.0" }
golem-api-grpc = { path = "../golem-api-grpc", version = "=0.0.0" }
golem-service-base = { path = "../golem-service-base", version = "=0.0.0" }
golem-wasm-ast = { path = "../wasm-ast", version = "=0.0.0" }
golem-wasm-rpc = { path = "../wasm-rpc", version = "=0.0.0" }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-dropper = { workspace = true }
async-dropper-simple = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-jrpc = { workspace = true }
bincode = { workspace = true }
futures-util = { workspace = true }
gethostname = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

wasmtime = { version = "=32.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "=32.0.0" }
wasmtime-wasi-http = { version = "=32.0.0" }


[dev-dependencies]
test-r = { workspace = true }
golem-test-framework = { path = "../golem-test-framework", version = "=0.0.0" }

[[test]]
name = "integration"
path = "tests/lib.rs"
harness = false
