[package]
name = "cloud-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cloud-service"
path = "src/server.rs"

[lib]

[dependencies]
golem-api-grpc = { workspace = true }
golem-common = { workspace = true }
golem-component-service-base = { workspace = true }
golem-service-base = { workspace = true }
golem-wasm-rpc = { workspace = true }
golem-worker-service-base = { workspace = true }

cloud-common = { path = "../cloud-common" }
cloud-api-grpc = { path = "../cloud-api-grpc" }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
async-trait = { workspace = true }
bigdecimal = "0.4.2"
bytes = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true }
figment = { workspace = true }
futures-util = { workspace = true }
golem-wasm-ast = "0.2.1"
http = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
jsonwebtoken = "9.2.0"
lazy_static = { workspace = true }
mappable-rc = "0.1.1"
poem = { workspace = true, features = ["prometheus", "opentelemetry", "cookie", "test"] }
poem-openapi = { workspace = true }
prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.5.0"
strum = { workspace = true }
strum_macros = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "migrate", "chrono"] }
tap = "1.0.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7.10"
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
testcontainers-modules = { version = "0.3.1", features = ["postgres"] }
