[package]
name = "cloud-service"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "cloud-service"
path = "src/server.rs"
test = false

[lib]
harness = false

[[test]]
name = "it_tests"
path = "tests/it_tests.rs"
harness = false

[dependencies]
golem-api-grpc = { workspace = true }
golem-common = { workspace = true, default-features = true }
golem-service-base = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bigdecimal = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
conditional-trait-gen = { workspace = true }
console-subscriber = { workspace = true }
darling = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
include_dir = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
mappable-rc = { workspace = true }
num-traits = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true, features = [
    "prometheus",
    "opentelemetry",
    "cookie",
    "test",
] }
poem-derive = { workspace = true }
poem-openapi = { workspace = true }
poem-openapi-derive = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "uuid",
    "migrate",
    "chrono",
] }
strum = { workspace = true }
strum_macros = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test-r = { workspace = true }
