# Separate workspace for dev/build tooling, kept out of the main workspace's
# --workspace/clippy/udeps/release. Add more tool crates as members.
[workspace]
resolver = "2"
members = ["dir-mirror"]

[workspace.dependencies]
tempfile = "3.18.0"
test-r = { version = "3.0.10", default-features = true }
