# Separate workspace for dev/build tooling, kept out of the main workspace's
# --workspace/clippy/udeps/release. Tools here are intentionally std-only (no
# dependencies) so they compile/check/test almost instantly — see README.md.
# Add more tool crates as members.
[workspace]
resolver = "2"
members = ["dir-mirror"]
