[package]
name = "embed-openai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
strip = true

[target.wasm32-wasi.dependencies]
wit-bindgen = { version = "0.16", default-features = false, features = ["realloc"] }

[dependencies]
dotenv = "0.15"
anyhow = "1.0"
wit-bindgen = { version = "0.16", default-features = false, features = ["realloc"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1.0"
golem-api-1-x = { path = "../golem-common/golem-api-1-x", version = "0.1.0", optional = true }

# Feature flags
[features]
default = ["durability"]
durability = ["golem-api-1-x"]

# For tests
[dev-dependencies]
serial_test = "2.0"
mockall = "0.11"
tokio = { version = "1.0", features = ["macros", "rt"] }