[package]
name = "golem-api-grpc"
version = "0.0.0"
edition = "2021"

homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem"
description = "GRPC API for Golem services"

license-file = "../LICENSE"

[lib]
harness = false

[dependencies]
golem-wasm-ast = { workspace = true, features = ["protobuf"] }
golem-wasm-rpc = { workspace = true, features = ["host-bindings", "protobuf"] }

bincode = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
tonic-build = { workspace = true }
