[package]
name = "golem-cli"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud/"
repository = "https://github.com/golemcloud/golem"
readme = "README.md"
description = "Command line interface for Golem."
autotests = false

[lib]
harness = false

[[bin]]
name = "golem-cli"
path = "src/main.rs"
test = false

[[test]]
name = "integration"
path = "tests/main.rs"
harness = false

[dependencies]
golem-client = { path = "../golem-client", version = "0.0.0" }
golem-common = { path = "../golem-common", version = "0.0.0", default-features = false }
golem-rib = { path = "../golem-rib", version = "0.0.0", default-features = false }
golem-wasm-ast = { path = "../wasm-ast", version = "0.0.0", default-features = false, features = ["analysis"] }
golem-wasm-rpc = { path = "../wasm-rpc", version = "0.0.0", default-features = false }
golem-wasm-rpc-stubgen = { path = "../wasm-rpc-stubgen", version = "0.0.0" }

anyhow.workspace = true
assert2 = { workspace = true }
async-trait = { workspace = true }
async_zip = { workspace = true, features = ["tokio", "tokio-fs", "deflate"] }
base64 = "0.22.1"
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = "3.0.1"
clap_complete = { version = "4.5.38" }
cli-table = { workspace = true }
colored = "2.1.0"
derive_more = { workspace = true }
dirs = "5.0.1"
futures-util = { workspace = true }
glob = "0.3.1"
golem-examples = "1.1.1"
h2 = "0.4.7"
http = { workspace = true }
humansize = { workspace = true }
hyper = { workspace = true }
indoc = "2.0.5"
inquire = "0.7.5"
iso8601 = "0.6.1"
itertools = { workspace = true }
lenient_bool = "0.1.1"
log = { workspace = true }
native-tls = "0.2.12"
openapiv3 = { workspace = true }
phf = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true }
textwrap = "0.16.1"
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tower = "0.5.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = "0.24.0"
url = { workspace = true }
uuid = { workspace = true }
version-compare = "=0.0.11"
walkdir = "2.5.0"
wasm-wave = { workspace = true }

[dev-dependencies]
golem-test-framework = { path = "../golem-test-framework", version = "0.0.0" }

async-recursion = { workspace = true }
env_logger = "0.11.5"
log = "0.4.22"
postgres = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde_json_path = "0.7.1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
test-r = { workspace = true }
tokio-postgres = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
strip-ansi-escapes = "0.2.0"
