[package]
name = "golem-client"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem"
description = "Client for Golem Cloud's REST API"

include = ["src/**/*", "Cargo.toml", "build.rs", "openapi/**/*"]

[lib]
harness = false

[dependencies]
golem-common = { path = "../golem-common", version = "0.0.0", default-features = false }
golem-wasm-ast = { path = "../wasm-ast", version = "0.0.0", default-features = false, features = ["analysis"] }
golem-wasm-rpc = { path = "../wasm-rpc", version = "0.0.0", default-features = false }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-core = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }

[build-dependencies]
golem-openapi-client-generator = "0.0.12"
relative-path = "1.9.3"
