[package]
name = "golem-client"
version = "0.0.0"
edition = "2021"

homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem"
description = "Client for Golem Cloud's REST API"

license-file = "../LICENSE"

include = ["src/**/*", "Cargo.toml", "build.rs", "openapi/**/*"]

[lib]
harness = false

[dependencies]
golem-common = { workspace = true, features = ["model", "tokio"] }
golem-wasm-ast = { workspace = true, features = ["analysis"] }
golem-wasm-rpc = { workspace = true, default-features = true }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }

[build-dependencies]
golem-openapi-client-generator = { workspace = true }
