[package]
name = "golem-cloud-client"
version = "0.0.0"
edition = "2021"
description = "Client for Golem Cloud's REST API"

license-file = "../LICENSE"

include = ["src/**/*", "Cargo.toml", "build.rs", "openapi/**/*"]

[lib]
harness = false

[dependencies]
golem-client = { path = "../golem-client", version = "=0.0.0" }
golem-common = { path = "../golem-common", version = "=0.0.0" }
golem-wasm-ast = { path = "../wasm-ast", version = "=0.0.0", default-features = false, features = [
    "analysis",
] }
golem-wasm-rpc = { path = "../wasm-rpc", version = "=0.0.0", default-features = false }

async-trait = "^0.1"
bytes = "^1.5"
chrono = { version = "^0.4", features = ["serde"] }
futures-core = "^0.3"
http = "^1.0"
reqwest = { version = "^0.12", features = [
    "gzip",
    "json",
    "multipart",
    "stream",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = "^0.1"
uuid = { version = "^1.6", features = ["serde"] }

[dev-dependencies]
test-r = { workspace = true }

[build-dependencies]
golem-openapi-client-generator = "0.0.16"
serde_yaml = { workspace = true }
